[package]
name = "shamir-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ark-ff = "0.5"
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-std = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
proptest = "1.11.0"
