[package]
name = "shamir-secret"
version = "0.1.0"
edition = "2024"
authors = ["Isaac isaacakhigbe22@gmail.com"]
description = "Shamir secret is a verifiable secret sharing library with distributed key generation, built for blockchain protocols from first principles in Rust."
license = "MIT"
repository = "https://github.com/bourdillion/Shamirs-secret"
keywords = [
    "shamir",
    "secret-sharing",
    "frost",
    "threshold-signatures",
    "ethereum",
]
categories = ["cryptography"]
readme = "README.md"


[dependencies]
rand = "0.10.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ark-ff = "0.5"
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-std = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

[dev-dependencies]
proptest = "1.11.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
